Minor heading changes

--- a/test/sales.html
+++ b/test/sales.html
@@ -99,7 +99,7 @@
 				<img src="logo.png" alt="MARS Logo">				
 			</div>
 			<div id="logo">
-				<h1>MARS Data analytics</h1>
+				<h1>MARS Data analytics: Sales</h1>
 			</div>
 			<nav>
 				<div class="innertube">
