--- a/test/unbilled.html
+++ b/test/unbilled.html
@@ -98,7 +98,7 @@
 				<img src="logo.png" alt="MARS Logo">				
 			</div>
 			<div id="logo">
-				<h1>MARS Data analytics</h1>
+				<h1>MARS Data analytics: Unbilled</h1>
 			</div>
 			<nav>
 				<div class="innertube">
