--- a/test/map.html
+++ b/test/map.html
@@ -147,6 +147,7 @@
 				<button class="button button2" id="b2" data-src="analytics/india_map_consumers_per_retailer.html" data-width="100%" data-height="600">Cosumer/Retailer</button>
 				<button class="button button1" id="b1" data-src="analytics/india_map_billed_customers_slider.html" data-width="100%" data-height="600">Billed vs Total Retailers</button>
 				<button class="button button2" id="b2" data-src="analytics/india_map_dealers_per_million.html" data-width="100%" data-height="600">Retailer/Million</button>
+				<button class="button button1" id="b1" data-src="analytics/india_map_avg_bill_customers_slider.html" data-width="100%" data-height="600">Billed/Retailers</button>
 			</div>
 			
 			<iframe id='frame' frameborder="0" scrolling="no" width="100%" height="600">
