New graph with LPB and SKU

--- a/test/mars_index.html
+++ b/test/mars_index.html
@@ -112,6 +112,8 @@
 					<li><a href="coverage.html">Coverage</a></li>
 					<li><a href="sales.html">Sales</a></li>
 					<li><a href="unbilled.html">Unbilled Outlet</a></li>
+					<li><a href="lpb.html">LPB</a></li>
+					<li><a href="sku.html">SKU</a></li>
 					<li><a href="map.html">Maps</a></li>
 				</ul>
 				</div>
@@ -136,6 +138,18 @@
 			<div style="padding: 25px; background-color: #BCC6CC; display: inline-block;width: 250px;">
 				<i class="fas fa-chart-bar" style="font-size:150px;color:black;"></i></p>
 				<h3><p style="text-align:center;">Unbilled Outlet Analysis</p></h3>
+			</div>
+		</a>
+		<a href="lpb.html" style="text-decoration: none">	
+			<div style="padding: 25px; background-color: #E5E4E2; display: inline-block;width: 250px;">
+				<i class="fas fa-chart-line" style="font-size:150px;color:black;"></i></p>
+				<h3><p style="text-align:center;">Line Per Bill Analysis</p></h3>
+			</div>
+		</a>
+		<a href="sku.html" style="text-decoration: none">	
+			<div style="padding: 25px; background-color: #BCC6CC; display: inline-block;width: 250px;">
+				<i class="fas fa-chart-line" style="font-size:150px;color:black;"></i></p>
+				<h3><p style="text-align:center;">SKU Analysis</p></h3>
 			</div>
 		</a>
 		<a href="map.html" style="text-decoration: none">	
