--- a/test/unbilled.html
+++ b/test/unbilled.html
@@ -107,6 +107,8 @@
 					<li><a href="coverage.html">Coverage</a></li>
 					<li><a href="sales.html">Sales</a></li>
 					<li><a href="unbilled.html">Unbilled Outlet</a></li>
+					<li><a href="lpb.html">LPB</a></li>
+					<li><a href="sku.html">SKU</a></li>
 					<li><a href="map.html">Maps</a></li>
 				</ul>
 				</div>
