--- a/test/mars_index.html
+++ b/test/mars_index.html
@@ -148,7 +148,7 @@
 		</a>
 		<a href="sku.html" style="text-decoration: none">	
 			<div style="padding: 25px; background-color: #BCC6CC; display: inline-block;width: 250px;">
-				<i class="fas fa-chart-line" style="font-size:150px;color:black;"></i></p>
+				<i class="fas fa-box-open" style="font-size:150px;color:black;"></i></p>
 				<h3><p style="text-align:center;">SKU Analysis</p></h3>
 			</div>
 		</a>
