--- a/test/coverage.html
+++ b/test/coverage.html
@@ -109,6 +109,7 @@
 					<li><a href="sales.html">Sales</a></li>
 					<li><a href="unbilled.html">Unbilled Outlet</a></li>
 					<li><a href="lpb.html">LPB</a></li>
+					<li><a href="vpb.html">VPB</a></li>
 					<li><a href="sku.html">SKU</a></li>
 					<li><a href="map.html">Maps</a></li>
 				</ul>
