menu adjustments and screen are enhance

--- a/test/lpb.html
+++ b/test/lpb.html
@@ -21,19 +21,19 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			height: 100px; 
+			height: 80px; 
 			overflow: hidden; /* Disables scrollbars on the navigation frame. To enable scrollbars, change "hidden" to "scroll" */
 			background: #BCCE98;
 		}
 		
 		#logo {
-			padding:10px;
+			padding:5px;
 			float:left;
 		}
 		
 		main {
 			position: fixed;
-			top: 100px; /* Set this to the height of the header */
+			top: 80px; /* Set this to the height of the header */
 			left: 0; 
 			right: 0;
 			bottom: 0;
@@ -42,7 +42,7 @@
 		}
 		
 		.innertube {
-			margin: 15px; /* Provides padding for the content */
+			margin: 10px; /* Provides padding for the content */
 		}
 		
 		p {
@@ -94,7 +94,7 @@
 			text-decoration: none;
 			display: inline-block;
 			font-size: 16px;
-			margin: 4px 2px;
+			margin: 2px 2px;
 			cursor: pointer;
 		}
 
@@ -139,13 +139,13 @@
 				<h3>MARS Data analytics: LPB</h3>
 			</div>
 			<nav>
-				<div class="innertube">
+				<div class="nav">
 				<ul>
 					<li><a href="mars_index.html">Home</a></li>
 					<li><a href="coverage.html">Coverage</a></li>
 					<li><a href="sales.html">Sales</a></li>
 					<li><a href="unbilled.html">Unbilled Outlet</a></li>
-					<li><a href="lpb.html">LPB</a></li>
+					<li><a href="lpb.html"><u><b>LPB</u></b></a></li>
 					<li><a href="vpb.html">VPB</a></li>
 					<li><a href="sku.html">SKU</a></li>
 					<li><a href="map.html">Maps</a></li>
@@ -196,7 +196,7 @@
 			</form>
 		<br>
 
-        <iframe id="myIframe" src="analytics/mars_LPB_class_east.html" frameborder="0" marginwidth="0" marginheight="0" width="100%" height="600" allowfullscreen scrolling="no"></iframe>
+        <iframe id="myIframe" src="analytics/mars_LPB_class_east.html" frameborder="0" marginwidth="0" marginheight="0" width="100%" height="800" allowfullscreen scrolling="no"></iframe>
         
 		<!--
 			<form id="form1" method="post" style="text-align: center;">
