--- a/test/coverage.html
+++ b/test/coverage.html
@@ -21,19 +21,19 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			height: 100px; 
+			height: 80px; 
 			overflow: hidden; /* Disables scrollbars on the navigation frame. To enable scrollbars, change "hidden" to "scroll" */
 			background: #BCCE98;
 		}
 		
 		#logo {
-			padding:10px;
+			padding:5px;
 			float:left;
 		}
 		
 		main {
 			position: fixed;
-			top: 100px; /* Set this to the height of the header */
+			top: 80px; /* Set this to the height of the header */
 			left: 0; 
 			right: 0;
 			bottom: 0;
@@ -42,7 +42,7 @@
 		}
 		
 		.innertube {
-			margin: 15px; /* Provides padding for the content */
+			margin: 10px; /* Provides padding for the content */
 		}
 		
 		p {
@@ -102,10 +102,10 @@
 				<h3>MARS Data analytics: Coverage</h3>
 			</div>
 			<nav>
-				<div class="innertube">
+				<div class="nav">
 				<ul>
 					<li><a href="mars_index.html">Home</a></li>
-					<li><a href="coverage.html">Coverage</a></li>
+					<li><a href="coverage.html"><u><b>Coverage</u></b></a></li>
 					<li><a href="sales.html">Sales</a></li>
 					<li><a href="unbilled.html">Unbilled Outlet</a></li>
 					<li><a href="lpb.html">LPB</a></li>
@@ -120,7 +120,7 @@
 		<main>
 			<div class="innertube">
 				
-				<iframe src="analytics/mars_coverage_graph.html" width="100%" height="600" style="border:none;">
+				<iframe src="analytics/mars_coverage_graph.html" width="100%" height="800" style="border:none;">
 				</iframe>
 				
 			</div>
