--- a/test/vpb.html
+++ b/test/vpb.html
@@ -146,17 +146,18 @@
 		</header>
 				
 		<main> 
+		<!--
 			<div class="loadiframe" style="text-align: center;">
 				<button class="button button1" id="b1" data-src="analytics/india_map_avg_bill_value_customers_slider.html" data-width="100%" data-height="800">Average Bill Value</button>
-			<!--	<button class="button button2" id="b2" data-src="analytics/india_map_consumers_per_retailer.html" data-width="100%" data-height="600">Cosumer/Retailer</button>
+				<button class="button button2" id="b2" data-src="analytics/india_map_consumers_per_retailer.html" data-width="100%" data-height="600">Cosumer/Retailer</button>
 				<button class="button button1" id="b1" data-src="analytics/india_map_billed_customers_slider.html" data-width="100%" data-height="600">Billed vs Total Retailers</button>
 				<button class="button button2" id="b2" data-src="analytics/india_map_dealers_per_million.html" data-width="100%" data-height="600">Retailer/Million</button>
 				<button class="button button1" id="b1" data-src="analytics/india_map_avg_bill_customers_slider.html" data-width="100%" data-height="600">Avg. #Bill/Retailer</button>
-				-->
+				
 			</div>
 			
-			<iframe id='frame' frameborder="0" scrolling="no" width="100%" height="800">
-			<!--<iframe src="analytics/india_map_billed_customers.html" width="100%" height="600" style="border:none;">-->
+			<iframe id='frame' frameborder="0" scrolling="no" width="100%" height="800"> -->
+			<iframe src="analytics/india_map_avg_bill_value_customers_slider.html" width="100%" height="800" style="border:none;">
 			</iframe>
 			
 		</main>
