removing consumers per retailer

--- a/test/map.html
+++ b/test/map.html
@@ -147,10 +147,10 @@
 		<main> 
 			<div class="loadiframe" style="text-align: center;">
 				<button class="button button1" id="b1" data-src="analytics/india_map_billed_customers.html" data-width="100%" data-height="800">Billed Customer</button>
-				<button class="button button2" id="b2" data-src="analytics/india_map_consumers_per_retailer.html" data-width="100%" data-height="800">Cosumer/Retailer</button>
-				<button class="button button1" id="b1" data-src="analytics/india_map_billed_customers_slider.html" data-width="100%" data-height="800">Billed vs Total Retailers</button>
-				<button class="button button2" id="b2" data-src="analytics/india_map_dealers_per_million.html" data-width="100%" data-height="800">Retailer/Million</button>
-				<button class="button button1" id="b1" data-src="analytics/india_map_avg_bill_customers_slider.html" data-width="100%" data-height="800">Avg. #Bill/Retailer</button>
+			<!--	<button class="button button2" id="b2" data-src="analytics/india_map_consumers_per_retailer.html" data-width="100%" data-height="800">Cosumer/Retailer</button> -->
+				<button class="button button2" id="b2" data-src="analytics/india_map_billed_customers_slider.html" data-width="100%" data-height="800">Billed vs Total Retailers</button>
+				<button class="button button1" id="b1" data-src="analytics/india_map_dealers_per_million.html" data-width="100%" data-height="800">Retailer/Million</button>
+				<button class="button button2" id="b2" data-src="analytics/india_map_avg_bill_customers_slider.html" data-width="100%" data-height="800">Avg. #Bill/Retailer</button>
 			</div>
 			
 			<iframe id='frame' frameborder="0" scrolling="no" width="100%" height="800">
