Updated with Newcastle and publication

--- a/publication.html
+++ b/publication.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
 				<li class="page-scroll">
-                    <a onclick="javascript:reset_menus();" href="http://www.cs.stir.ac.uk/~dbh/">Home</a>
+                    <a onclick="javascript:reset_menus();" href="https://dbhowmik.github.io/">Home</a>
                 </li>
                 <!--<li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -67,13 +67,13 @@
                     </ul> 
                 </li> -->
                 <li class="page-scroll">
-                    <a onclick="javascript:reset_menus();$('#tab-2-content').show();" href="http://www.cs.stir.ac.uk/~dbh/#news">News</a>
+                    <a onclick="javascript:reset_menus();$('#tab-2-content').show();" href="https://dbhowmik.github.io/#news">News</a>
                 </li>
                 <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 Publications<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                    <li><a onclick="javascript:reset_menus();$('#tab-3-content').show();" href="http://www.cs.stir.ac.uk/~dbh/#publications">Selected</a></li>
+                    <li><a onclick="javascript:reset_menus();$('#tab-3-content').show();" href="https://dbhowmik.github.io/#publications">Selected</a></li>
                         <li><a href="#">All</a></li>
                     </ul>
                 </li>
@@ -83,24 +83,24 @@
                 </li> 
 				-->
                 <li class="page-scroll">
-                    <a onclick="javascript:reset_menus();$('#tab-4-content').show();" href="http://www.cs.stir.ac.uk/~dbh/#courses">Courses</a>
+                    <a onclick="javascript:reset_menus();$('#tab-4-content').show();" href="https://dbhowmik.github.io/#courses">Courses</a>
                 </li>
 				<!--
                 <li class="page-scroll">
                     <a onclick="javascript:reset_menus();$('#tab-5-content').show();" href="#awards">Awards</a>
                 </li> -->
                 <li class="page-scroll">
-                    <a onclick="javascript:reset_menus();$('#tab-6-content').show();" href="http://www.cs.stir.ac.uk/~dbh/#service">Professional</a>
+                    <a onclick="javascript:reset_menus();$('#tab-6-content').show();" href="https://dbhowmik.github.io/#service">Professional</a>
                 </li>                 
                 <li class="page-scroll">
-                <a onclick="javascript:reset_menus();$('#tab-8-content').show();" href="http://www.cs.stir.ac.uk/~dbh/#grants">Grants</a>
+                <a onclick="javascript:reset_menus();$('#tab-8-content').show();" href="https://dbhowmik.github.io/#grants">Grants</a>
                 </li>
 				<li class="page-scroll">
-                <a onclick="javascript:reset_menus();$('#tab-7-content').show();" href="http://www.cs.stir.ac.uk/~dbh/#team">Team</a>
+                <a onclick="javascript:reset_menus();$('#tab-7-content').show();" href="https://dbhowmik.github.io/#team">Team</a>
                 </li>
 				
                 <li class="page-scroll">
-                    <a onclick="javascript:reset_menus();$('#tab-9-content').show();" href="http://www.cs.stir.ac.uk/~dbh/#contact">Contact</a>
+                    <a onclick="javascript:reset_menus();$('#tab-9-content').show();" href="https://dbhowmik.github.io/#contact">Contact</a>
                 </li>
                 <li class="page-scroll">
                     <a onclick="javascript:reset_menus();$('#bs-example-navbar-collapse-2').toggle();">
@@ -127,15 +127,15 @@
 <section id="home" style="margin-top:40px">
 <div class="container">
 	<h2>Publications</h2>
-		<p>This list has <b> 15 </b>journal and 
-		<b>36 </b> conference papers from
-		2006 to 2021 &nbsp; | &nbsp; Last modified on
-		14 Feb 2021.</p>        
+		<p>This list has <b> 16 </b>journal and 
+		<b>41 </b> conference papers from
+		2006 to 2022 &nbsp; | &nbsp; Last modified on
+		09 Jul 2022.</p>        
 
 		<hr />
 
 		<p style="margin-bottom:30px">
-		<a href="#y2021">2021</a> | 
+		<a href="#y2022">2022</a> | <a href="#y2021">2021</a> |
 		<a href="#y2020">2020</a> | <a href="#y2019">2019</a> | 
 		<a href="#y2018">2018</a> | <a href="#y2017">2017</a> | 
 		<a href="#y2016">2016</a> | <a href="#y2015">2015</a> |
@@ -145,10 +145,23 @@
 		<a href="#y2008">2008</a> | <a href="#y2007">2007</a> | 
 		<a href="#y2006">2006</a> </p>
 		<hr /> 
-	<h3 id="y2021">2021</h3>
+	
+	
+<h3 id="y2022">2022</h3>
 
 
 <ul>
+<li>F  Temmermans, D  Bhowmik, F  Pereira and T  Ebrahimi, <i>Media security framework inspired by emerging challenges in fake media and NFT</i>, Optics, Photonics and Digital Technologies for Imaging Applications VII (SPIE) <b>12138</b>, 185-191, 2022</li>
+<li>M  Simpson, V  Akbari, A  Marino, G  N  Prabhu, D  Bhowmik, S  Rupavatharam, A  Datta, A  Kleczkowski, JARP Sujeetha, G  Anantrao and others, <i>Detecting Water Hyacinth Infestation in Kuttanad, India, Using Dual-Pol Sentinel-1 SAR Imagery</i>, Remote Sensing <b>14</b>, 2845, 2022</li>
+</ul>
+<h3 id="y2021">2021</h3>
+
+
+<ul>
+<li>F  Temmermans, D  Bhowmik, F  Pereira and T  Ebrahimi, <i>An Introduction to the JPEG Fake Media Initiative</i>, 2021 IEEE 4th International Conference on Multimedia Information Processing and Retrieval (MIPR), 406-411, 2021</li>
+<li>V  Akbari, M  Simpson, S  Maharaj, A  Marino, D  Bhowmik, G  Prabhu, S  Rupavatharam, A  Datta, A  Kleczkowski and J  Sujeetha, <i>Monitoring aquatic weeds in Indian wetlands using multitemporal remote sensing data with machine learning techniques</i>, 2021 IEEE International Geoscience and Remote Sensing Symposium (IGARSS), 6847-6850, 2021</li>
+<li>F  Temmermans, D  Bhowmik, F  Pereira and T  Ebrahimi, <i>JPEG Fake Media: a provenance-based sustainable approach to secure and trustworthy media annotation</i>, Applications of Digital Image Processing XLIV (SPIE) <b>11842</b>, 155-164, 2021</li>
+<li>D  Bhowmik, M  Elawady and K  Nogueira, <i>Security and Forensics Exploration of Learning-based Image Coding</i>, 2021 International Conference on Visual Communications and Image Processing (VCIP), 1-5, 2021</li>
 <li>Y  Hou, A  Cuyt, W  Lee and D  Bhowmik, <i>Decomposing Textures Using Exponential Analysis</i>, IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2021</li>
 <li>A  Datta, S  Maharaj, G  N  Prabhu, D  Bhowmik, A  Marino, V  Akbari, S  Rupavatharam, J  A  Sujeetha, G  Anantrao and V  Poduvattil, <i>Monitoring the spread of water hyacinth (Pontederia crassipes): challenges and future developments</i>, Frontiers in Ecology and Evolution <b>9</b>, 6, 2021 <a href="https://www.frontiersin.org/article/10.3389/fevo.2021.631338">[html]</a> <a href="10.3389/fevo.2021.631338">[doi]</a></li>
 </ul>
@@ -289,7 +302,7 @@
 <footer>
     <small>
     <center>
-        © 2021 | D. Bhowmik. Credits: AR template
+        © 2022 | D. Bhowmik. Credits: AR template
     <a onclick="javascript:$('#credit').toggle();"><img border="0" src="images/ccby.png"/></a>
     <div style="display:none;" id="credit">[AR template available under Creative Commons CC BY 4.0 licence: 
     <a href="https://github.com/dmsl/academic-responsive-template"_blank">
