--- a/index.html
+++ b/index.html
@@ -338,8 +338,9 @@ mark {
 				<li>MSc Program Director for <a href="https://www.stir.ac.uk/courses/pg-taught/computing-and-data-science/big-data/">Big Data</a> and <a href="https://www.stir.ac.uk/courses/pg-taught/computing-and-data-science/artificial-intelligence/">Artificial Intelligence (AI)</a> at University of Stirling.</li>
 				<li> Cyber security research theme leader: <a href="https://www.sicsa.ac.uk/research/cyber-security/" target="_blank"> Scottish Informatics and Computer Science Alliance (SICSA)</a>.</li>
 				<li> Founder: <a href="http://vip.cs.stir.ac.uk/" target="_blank">Stirling Vision and Image Processing (SVIP)</a> research group.</li>				
-				<li> Leading: <a href="https://jpeg.org/" target="_blank">JPEG</a> international standardisation on <a href="https://jpeg.org/jpegfakemedia/index.html" target="_blank">Fake Media</a> and <a href="https://jpeg.org/items/20190724_blockchain_workshop_brussels.html" target="_blank">Media Blockchain</a>.</li>				
-            </ul>
+				<!--<li> Leading: <a href="https://jpeg.org/" target="_blank">JPEG</a> international standardisation on <a href="https://jpeg.org/jpegfakemedia/index.html" target="_blank">Fake Media</a> and <a href="https://jpeg.org/items/20190724_blockchain_workshop_brussels.html" target="_blank">Media Blockchain</a>.</li>				
+				-->
+			</ul>
 		   
 		   <span class="label label-success">PhD Examiner</span>
 		   <ul>
