--- a/index.html
+++ b/index.html
@@ -437,6 +437,9 @@ mark {
 			<h2>Grants / Scholarships</h2>
 			Approaximate combined value: >GBP 1.5M.
             <ul>	
+			    <li>
+                    <span class="label label-success">NERC [2022-22]</span> UK Research and Innovation funding for <a target="_blank" href="https://ukri-netzero-energetic.github.io/">ENergy-aware hEteRoGenEous compuTIng at sCale (ENERGETIC)</a>.
+                </li>
 				<li>
                     <span class="label label-success">Industry [2022-23]</span> Scottish Enterprise green jobs industrial funding for INtelligent FOod Recognition And Monitoring For Patient Wellbeing (INFORM).
                 </li>
