--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@ mark {
             <div class="allshow" style="display:none;" id="tab-1-content">
             <hr class="star-primary">
 
-			<p class="lead"><mark>From 1st August 2022, I'll be a Senior Lecturer (Associate Professor) within <a target="_blank" href="https://www.ncl.ac.uk/computing/"> School of Computing </a> at 
-			<a target="_blank" href="https://www.ncl.ac.uk/">Newcastle University</a>.</mark> </p>
+			<p class="lead"><mark><b>From 1st August 2022, I'll be a Senior Lecturer (Associate Professor) within <a target="_blank" href="https://www.ncl.ac.uk/computing/"> School of Computing </a> at 
+			<a target="_blank" href="https://www.ncl.ac.uk/">Newcastle University</a>.</b></mark> </p>
             <p class="lead">I am a <a target="_blank" href="https://www.stir.ac.uk/people/926886">Lecturer (Assistant Professor)</a> in the <a target="_blank" href="http://www.cs.stir.ac.uk/"> Division of Computing Science and Mathematics</a> 
 			at <a target="_blank" href="http://www.stir.ac.uk/">University of Stirling</a> and the founder of<a target="_blank" href="http://vip.cs.stir.ac.uk/"> 
 			Stirling Vision and Image Processing Laboratory (SVIP)</a>. I hold a PhD in <a href="https://www.sheffield.ac.uk/eee" target="_blank"> Electronic and Electrical Engineering </a> from the <a href="https://www.sheffield.ac.uk/" target="_blank">
