--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ mark {
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span><a href="#"><img border="0" width="170" src="images/UoS-LOGO.jpg"/></a></span>
+            <span><a href="#"><img border="0" width="170" src="images/UoS-LOGO1.jpg"/></a></span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -139,20 +139,18 @@ mark {
             <h3>Dr Deepayan Bhowmik
                 <h5>Ph.D. Univ. of Sheffield, UK</h5></h3>
 
-            <h4>Lecturer (Assistant Professor)<br>
-            Div. of Computing Science & Mathematics<br>
-			Faculty of Natural Sciences<br>
-            University of Stirling<br>
-            Stirling, FK9 4LA, Scotland, UK<br>
-            Tel/Fax: <a href="tel:00441786466407">+44-(0)1786466407</a><br/>            
+            <h4>Senior Lecturer (Associate Professor)<br>
+            School of Computing<br>
+            Newcastle University<br>
+            Urban Science Building, Newcastle upon Tyne, NE4 5TG, UK<br>            
             Email:
             <script language="JavaScript">
                 <!--
                 document.write("&nbsp;");
-                spiderjam('deepayan.bhowmik','stir.ac.uk');
+                spiderjam('deepayan.bhowmik','ncl.ac.uk');
                 -->
             </script><br/>
-            Directions: <a target="_blank" href="https://goo.gl/maps/pBdwkut7HfJ2">https://goo.gl/maps/pBdwkut7HfJ2</a>
+            Directions: <a target="_blank" href="https://goo.gl/maps/Jz8AJPdpn1Xp4pTE7</a>
             </h4>
         </div>
 
@@ -188,8 +186,8 @@ mark {
             <div class="allshow" style="display:none;" id="tab-1-content">
             <hr class="star-primary">
 
-			<p class="lead"><mark><b>From 1st August 2022, I'll be a Senior Lecturer (Associate Professor) within <a target="_blank" href="https://www.ncl.ac.uk/computing/"> School of Computing </a> at 
-			<a target="_blank" href="https://www.ncl.ac.uk/">Newcastle University</a>.</b></mark> </p>
+			<p class="lead"><mark><b>From 1st August 2022, I'm be a Senior Lecturer (Associate Professor) within <a target="_blank" href="https://www.ncl.ac.uk/computing/"> School of Computing </a> at 
+			<a target="_blank" href="https://www.ncl.ac.uk/">Newcastle University</a>. Further updates to follow.</b></mark> </p>
             <p class="lead">I am a <a target="_blank" href="https://www.stir.ac.uk/people/926886">Lecturer (Assistant Professor)</a> in the <a target="_blank" href="http://www.cs.stir.ac.uk/"> Division of Computing Science and Mathematics</a> 
 			at <a target="_blank" href="http://www.stir.ac.uk/">University of Stirling</a> and the founder of<a target="_blank" href="http://vip.cs.stir.ac.uk/"> 
 			Stirling Vision and Image Processing Laboratory (SVIP)</a>. I hold a PhD in <a href="https://www.sheffield.ac.uk/eee" target="_blank"> Electronic and Electrical Engineering </a> from the <a href="https://www.sheffield.ac.uk/" target="_blank">
@@ -201,23 +199,7 @@ mark {
             </p>
 			<p>I received more than £1.5M grant from various research councils and industry. I'm also the program director of two MSc courses - <a href="https://www.stir.ac.uk/courses/pg-taught/computing-and-data-science/big-data/">Big Data</a> and <a href="https://www.stir.ac.uk/courses/pg-taught/computing-and-data-science/artificial-intelligence/">Artificial Intelligence (AI)</a></p>
 			<p> I'm looking for bright candidates interested in PhD, internship, MSc and Honors project. Be in touch with me for further informaiton. 
-			</p>
-            <!--<p>
-            Besides research and teaching, I also enjoy transforming basic research results into systems and services. Check out a few recent examples:
-            <a href="http://anyplace.cs.ucy.ac.cy" target="_blank">Anyplace</a> (Indoor, Big Data),
-            <a href="http://rayzit.com/" target="_blank">Rayzit</a> (Crowdsourcing, Big Data),
-            <a href="http://smartlab.cs.ucy.ac.cy" target="_blank">SmartLab</a> (Mobile Cloud),
-            <a href="http://www2.ucy.ac.cy/~laoudias/pages/platform.html" target="_blank">Airplace</a> (Indoor),
-            <a href="http://smarttrace.cs.ucy.ac.cy" target="_blank">Smarttrace</a> (Trajectories),
-            <a href="http://tvm.cs.ucy.ac.cy" target="_blank">TVM</a> (Privacy),
-            <a href="http://kspot.cs.ucy.ac.cy" target="_blank">KSpot</a> (Sensor).
-            </p> 
-			
-            <p><a href="bio.html" class="btn-sm btn-primary">Short Biography &raquo;</a>
-               <a href="cv.html" class="btn-sm btn-primary">CV (Web)&raquo;</a>
-               <a href="zeinalipour.pdf" class="btn-sm btn-primary">CV (PDF)&raquo;</a>
-            </div> -->
-
+			</p>            
         </div>
     </div>
 </section>
@@ -602,19 +584,18 @@ mark {
 
                 <div align="left" class="col-md-3">
                     <h4>OFFICE ADDRESS</h4>
-                    <p> 4B88, Cotrell Building,<br/>
-					    Computing Science,<br/>
-                        University of Stirling,<br/>
-                        Stirling, FK9 4LA, Scotland, UK<br/>
-                        Tel: <a href="tel:00441786466407">+44-1786466407</a><br/>                        
+                    <p> School of Computing,<br/>
+		        Urban Sciences Building,<br/>
+                        Newcastle University,<br/>
+                        Newcastle upon Tyne, NE4 5TG, UK<br/>
+                        <!--Tel: <a href="tel:00441786466407">+44-1786466407</a><br/> -->                       
                         <br/>
                     </p>
                 </div>
 
                 <div align="left" class="col-md-3">
                     <h4>OFFICE DIRECTIONS</h4>
-                    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15390.546412533455!2d-3.9289068898714246!3d56.145196551466256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488862ed606b4dd3%3A0xd01cc2607ea63d05!2sUniversity+of+Stirling!5e0!3m2!1sen!2suk!4v1542650416818" width="250" height="175" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </p>
+                    <p><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4579.935240033504!2d-1.625274!3d54.973667!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x81923bfb3b69f987!2sSchool%20of%20Computing!5e0!3m2!1sen!2suk!4v1660474259906!5m2!1sen!2suk" width="250" height="175" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
                 </div>
         </div>
         <hr class="star-primary">
