--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ mark {
                 spiderjam('deepayan.bhowmik','ncl.ac.uk');
                 -->
             </script><br/>
-            Directions: <a target="_blank" href="https://goo.gl/maps/Jz8AJPdpn1Xp4pTE7</a>
+            Directions: <a target="_blank" href="https://goo.gl/maps/Jz8AJPdpn1Xp4pTE7>LINK</a>
             </h4>
         </div>
 
@@ -186,7 +186,7 @@ mark {
             <div class="allshow" style="display:none;" id="tab-1-content">
             <hr class="star-primary">
 
-			<p class="lead"><mark><b>From 1st August 2022, I'm be a Senior Lecturer (Associate Professor) within <a target="_blank" href="https://www.ncl.ac.uk/computing/"> School of Computing </a> at 
+			<p class="lead"><mark><b>From 1st August 2022, I'm a Senior Lecturer (Associate Professor) within <a target="_blank" href="https://www.ncl.ac.uk/computing/"> School of Computing </a> at 
 			<a target="_blank" href="https://www.ncl.ac.uk/">Newcastle University</a>. Further updates to follow.</b></mark> </p>
             <p class="lead">I am a <a target="_blank" href="https://www.stir.ac.uk/people/926886">Lecturer (Assistant Professor)</a> in the <a target="_blank" href="http://www.cs.stir.ac.uk/"> Division of Computing Science and Mathematics</a> 
 			at <a target="_blank" href="http://www.stir.ac.uk/">University of Stirling</a> and the founder of<a target="_blank" href="http://vip.cs.stir.ac.uk/"> 
@@ -559,10 +559,11 @@ mark {
                 <div align="left" class="col-md-3">
                     <h4>POSTAL ADDRESS</h4>
 
-                    <p>                        
-                        Division of Computing Science & Mathematics<br>                        
-                        University of Stirling<br>
-                        Stirling, FK9 4LA, Scotland, UK<br>
+                    <p>          
+		        School of Computing,<br/>
+		        Urban Sciences Building,<br/>
+                        Newcastle University,<br/>
+                        Newcastle upon Tyne, NE4 5TG, UK<br/>		    
                     </p>                    
                     <script language="JavaScript">
                         <!--
