--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ mark {
                 spiderjam('deepayan.bhowmik','ncl.ac.uk');
                 -->
             </script><br/>
-            Directions: <a target="_blank" href="https://goo.gl/maps/Jz8AJPdpn1Xp4pTE7>LINK</a>
+            Directions: <a target="_blank" href="https://goo.gl/maps/Jz8AJPdpn1Xp4pTE7">MAP</a>
             </h4>
         </div>
 
