--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Dr Deepayan Bhowmik | University of Stirling</title>
+<title>Dr Deepayan Bhowmik | Newcastle University</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Font Awesome Icons -->
@@ -52,7 +52,7 @@ mark {
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span><a href="#"><img border="0" width="170" src="images/UoS-LOGO1.jpg"/></a></span>
+            <span><a href="#"><img border="0" width="170" src="images/NU-LOGO.jpg"/></a></span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
