--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ mark {
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span><a href="#"><img border="0" width="170" src="images/NU-LOGO.jpg"/></a></span>
+            <span><a href="#"><img border="0" width="170" src="images/NU-LOGO.png"/></a></span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
