--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ mark {
                     <script language="JavaScript">
                         <!--
                         document.write("&nbsp;");
-                        spiderjam('deepayan.bhowmik','stir.ac.uk');
+                        spiderjam('deepayan.bhowmik','ncl.ac.uk');
                         -->
                     </script><br>
                 </div>
