minor text alteration

--- a/fge/fish-catch-stat/cmfri.html
+++ b/fge/fish-catch-stat/cmfri.html
@@ -136,7 +136,7 @@
 				<img src="logo.png" alt="RAEng Logo">				
 			</div>
 			<div id="logo">
-				<h3>Weed Watch Water Quality Data Analytics</h3>
+				<h3>FGE Fish Catch Data Analytics</h3>
 			</div>
 			<nav>
 				<div class="nav">
