--- a/fge/fish-catch-stat/cmfri.html
+++ b/fge/fish-catch-stat/cmfri.html
@@ -180,6 +180,9 @@
 					<option value="html-cmfri/sardine_total.html">Sardine catch (Total)</option>
 					<option value="html-cmfri/sardine_ringseine.html">Sardine catch (Ringseine)</option>
 					<option value="html-cmfri/sardine_others.html">Sardine catch (Others)</option>
+					<option value="html-cmfri/mackerel_total.html">Mackerel catch (Total)</option>
+					<option value="html-cmfri/mackerel_ringseine.html">Mackerel catch (Ringseine)</option>
+					<option value="html-cmfri/mackerel_others.html">Mackerel catch (Others)</option>
 					</select>
 				</label>
 			</form>
