website update after moving to Newcastle University

--- a/publication.html
+++ b/publication.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Dr Deepayan Bhowmik | University of Stirling</title>
+<title>Dr Deepayan Bhowmik | Nerwcastle University</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Font Awesome Icons -->
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span><a href="#"><img border="0" width="170" src="images/UoS-LOGO.jpg"/></a></span>
+            <span><a href="#"><img border="0" width="170" src="images/NU-LOGO.png"/></a></span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
