New page for phd topics & minor modification in index page.

--- a/index.html
+++ b/index.html
@@ -468,25 +468,40 @@ mark {
             <hr class="star-primary">
             <!--<h2>Advising <a href="cv.html#SECTION000110000000000000000" class="btn btn-primary">More &raquo;</a></h2> -->
 			<h2>Team</h2>
-            <ul>		
+            <ul>	
+				<li>
+                    <span class="label label-success"> Postdoc</span> <a target="_blank" href=""> Position advertised</a>, Embedded Food Recognition (INFORM) Phase II.
+                </li>
+				<li>
+                    <span class="label label-success">Ph.D.</span>  <a target="_blank" href="">Yen Lau</a>, Newcastle University, UK. <i></i>
+                </li>
+				<li>
+                    <span class="label label-success">Ph.D.</span>  <a target="_blank" href="">George Paul</a>, Newcastle University, UK. <i></i>
+                </li>
+				<li>
+                    <span class="label label-success">Ph.D.</span>  <a target="_blank" href="">Matthew Chapman</a>, Newcastle University, UK. <i></i>
+                </li>
+				<li>
+                    <span class="label label-success">Ph.D.</span>  <a target="_blank" href="">Zachary Hui</a>, Newcastle University, UK. (Co supervisor) <i></i>
+                </li>
 	            <li>
-                    <span class="label label-success"> Postdoc</span> <a target="_blank" href="https://www.linkedin.com/in/james-rainey-b928b1a8/?originalSubdomain=uk"> Dr James Rainey</a>, Embedded Food Recognition (INFORM).
+                    <span class="label label-default"> Postdoc</span> <a target="_blank" href="https://www.linkedin.com/in/james-rainey-b928b1a8/?originalSubdomain=uk"> Dr James Rainey</a>, Embedded Food Recognition (INFORM).
                 </li>    
 
 	            <li>
-                    <span class="label label-success"> Postdoc</span> <a target="_blank" href="https://www.stir.ac.uk/people/1662479"> Dr Vahid Akbari</a>, Multimodal Data Analysis For Monitoring Invasive Aquatic Weeds In India.
+                    <span class="label label-default"> Postdoc</span> <a target="_blank" href="https://www.stir.ac.uk/people/1662479"> Dr Vahid Akbari</a>, Multimodal Data Analysis For Monitoring Invasive Aquatic Weeds In India.
                 </li>  
                 <li>
-                    <span class="label label-success">Postdoc</span>  <a target="_blank" href="https://www.linkedin.com/in/teymoor-ali">Teymoor Ali</a>, <a target="_blank" href="https://ukri-netzero-energetic.github.io/">ENergy-aware hEteRoGenEous compuTIng at sCale (ENERGETIC)</a>.
+                    <span class="label label-default">Postdoc</span>  <a target="_blank" href="https://www.linkedin.com/in/teymoor-ali">Teymoor Ali</a>, <a target="_blank" href="https://ukri-netzero-energetic.github.io/">ENergy-aware hEteRoGenEous compuTIng at sCale (ENERGETIC)</a>.
                 </li>  
 		<li>
                     <span class="label label-success">Ph.D.</span>  <a target="_blank" href="https://www.linkedin.com/in/teymoor-ali">Teymoor Ali</a>, University of Stirling, UK. <i>[Domain specific optimisations for real-time image processing on heterogeneous FPGA+CPU]</i>
                 </li> 	
 				<li>
-                    <span class="label label-success">Ph.D.</span>  <a target="_blank" href="https://www.linkedin.com/in/alexander-carmichael/">Alexander Carmichael</a>, University of Stirling, UK. <i>[Improving animal health in marine ecosystem using data minning and signal/image processing]</i>
+                    <span class="label label-default">Ph.D.</span>  <a target="_blank" href="https://www.linkedin.com/in/alexander-carmichael/">Alexander Carmichael</a>, University of Stirling, UK. <i>[Improving animal health in marine ecosystem using data minning and signal/image processing]</i> (Submitted: 2023).
                 </li> 
 				<li>
-                    <span class="label label-success">Ph.D.</span> <a target="_blank" href="http://www.cs.stir.ac.uk/~ich/">Ipshita Roy Chowdhury</a>, University of Stirling, UK. <i>[Modeling and predicting cyber hacking breaches]</i>
+                    <span class="label label-default">Ph.D.</span> <a target="_blank" href="http://www.cs.stir.ac.uk/~ich/">Ipshita Roy Chowdhury</a>, University of Stirling, UK. <i>[Modeling and predicting cyber hacking breaches]</i> (Submitted: 2023). 
                 </li>	
                 <li>
                     <span class="label label-default">Visiting Ph.D.</span> Sajjad Ahmed, <a target="_blank" href="https://international.unicam.it/">University of Camerino</a>, Italy. <i>[Knowledge engineering to detect fake news in social networks] (Completed: 2022).</i>
@@ -595,7 +610,7 @@ mark {
 <footer>
     <small>
     <center>
-        © 2022 | D. Bhowmik. Credits: AR template
+        © 2023 | D. Bhowmik. Credits: AR template
     <a onclick="javascript:$('#credit').toggle();"><img border="0" src="images/ccby.png"/></a>
     <div style="display:none;" id="credit">[AR template available under Creative Commons CC BY 4.0 licence: 
     <a href="https://github.com/dmsl/academic-responsive-template"_blank">
