--- a/index.html
+++ b/index.html
@@ -401,28 +401,43 @@ mark {
             <hr class="star-primary">
             <!--<h2>Advising <a href="cv.html#SECTION000110000000000000000" class="btn btn-primary">More &raquo;</a></h2> -->
 			<h2>Grants / Scholarships</h2>
-			Approaximate combined value: >GBP 1.5M.
+			Approaximate combined value: >GBP 2M.
             <ul>	
+				<li>
+                    <span class="label label-success">Innovate UK KTP [2023-25]</span> KTP funding for INtelligent FOod Recognition And Monitoring For Patient Wellbeing (INFORM) - Phase II.
+                </li>
+				<li>
+                    <span class="label label-success">PhD Studenship [2023-27]</span> Funded by <a target="_blank" href="https://www.airbus.com/en/space">Airbus Defence and Space</a>.
+                </li>               
+				<li>
+                    <span class="label label-success">PhD Studenship [2023-27]</span> Funded by <a target="_blank" href="https://www.ncl.ac.uk/computing/">School of Computing, Newcastle University</a>.
+                </li>               
+				<li>
+                    <span class="label label-success">PhD Studenship [2023-27]</span> Jointly funded by <a target="_blank" href="https://www.st.com/">STMicroelectronics</a>, Edinburgh and <a target="_blank" href="https://www.ukri.org/councils/epsrc/">EPSRC</a>.
+                </li>               
+				<li>
+                    <span class="label label-default">DASA [2023-23]</span> Neuromorphic Vision System.
+                </li>
 			    <li>
-                    <span class="label label-success">NERC [2022-22]</span> UK Research and Innovation funding for <a target="_blank" href="https://ukri-netzero-energetic.github.io/">ENergy-aware hEteRoGenEous compuTIng at sCale (ENERGETIC)</a>.
+                    <span class="label label-default">NERC [2022-22]</span> UK Research and Innovation funding for <a target="_blank" href="https://ukri-netzero-energetic.github.io/">ENergy-aware hEteRoGenEous compuTIng at sCale (ENERGETIC)</a>.
                 </li>
 				<li>
-                    <span class="label label-success">Industry [2022-23]</span> Scottish Enterprise green jobs industrial funding for INtelligent FOod Recognition And Monitoring For Patient Wellbeing (INFORM).
+                    <span class="label label-default">Industry [2022-23]</span> Scottish Enterprise green jobs industrial funding for INtelligent FOod Recognition And Monitoring For Patient Wellbeing (INFORM).
                 </li>
 				<li>
-                    <span class="label label-success">RAEng [2021-23]</span> Royal Academy of Engineering seed funding on <a target="_blank" href="https://www.southampton.ac.uk/indiacentre/research/food-gender-enterprise.page">Food, gender, enterprise: leveraging interdisciplinarity for sustainable small-scale fisheries </a>.
+                    <span class="label label-default">RAEng [2021-23]</span> Royal Academy of Engineering seed funding on <a target="_blank" href="https://www.southampton.ac.uk/indiacentre/research/food-gender-enterprise.page">Food, gender, enterprise: leveraging interdisciplinarity for sustainable small-scale fisheries </a>.
                 </li>
 				<li>
                     <span class="label label-success">EU Horizon 2020 [2021-25]</span> EU MSCA RISE funding for <a target="_blank" href="http://expower.eu/">Exponential Analisys Empowering Innovation (EXPOWER)</a>.
                 </li>
 				<li>
-                    <span class="label label-success">RAEng [2020-23]</span> Royal Academy of Engineering GCRF funding on <a target="_blank" href="http://vip.cs.stir.ac.uk/weed-watch">Multimodal Data Analysis For Monitoring Invasive Aquatic Weeds In India</a>.
+                    <span class="label label-success">RAEng [2020-24]</span> Royal Academy of Engineering GCRF funding on <a target="_blank" href="http://vip.cs.stir.ac.uk/weed-watch">Multimodal Data Analysis For Monitoring Invasive Aquatic Weeds In India</a>.
                 </li>				
 				<li>
                     <span class="label label-success">PhD Studenship [2019-22]</span> Jointly funded by <a target="_blank" href="https://www.st.com/">STMicroelectronics</a>, Edinburgh and <a target="_blank" href="https://www.stir.ac.uk/">University of Stirling</a>.
                 </li>                 
                 <li>
-                    <span class="label label-success">PhD Studenship [2019-23]</span> Jointly funded by <a target="_blank" href="https://www.sruc.ac.uk/">SRUC</a>, Inverness and <a target="_blank" href="https://www.stir.ac.uk/">University of Stirling</a>.
+                    <span class="label label-default">PhD Studenship [2019-23]</span> Jointly funded by <a target="_blank" href="https://www.sruc.ac.uk/">SRUC</a>, Inverness and <a target="_blank" href="https://www.stir.ac.uk/">University of Stirling</a>.
                 </li>
 				<li>
                     <span class="label label-default">SFC [2020-21]</span> Smart Screenshot Organiser with <a target="_blank" href="https://picojar.com/">PicoJar Ltd</a>.
