--- a/phd-topics.html
+++ b/phd-topics.html
@@ -59,7 +59,7 @@ mark {
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
 				<li class="page-scroll">
-                    <a onclick="javascript:reset_menus();" href="#">Home</a>
+                    <a onclick="javascript:reset_menus();" href="https://dbhowmik.github.io/">Home</a>
                 </li>
                 <!--<li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -72,13 +72,13 @@ mark {
                     </ul> 
                 </li> -->
                 <li class="page-scroll">
-                    <a onclick="javascript:reset_menus();$('#tab-2-content').show();" href="#news">News</a>
+                    <a onclick="javascript:reset_menus();$('#tab-2-content').show();" href="https://dbhowmik.github.io/#news">News</a>
                 </li>
                 <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 Publications<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                    <li><a onclick="javascript:reset_menus();$('#tab-3-content').show();" href="#publications">Selected</a></li>
+                    <li><a onclick="javascript:reset_menus();$('#tab-3-content').show();" href="https://dbhowmik.github.io/#publications">Selected</a></li>
                         <li><a href="publication.html">All</a></li>
                     </ul>
                 </li>
@@ -88,24 +88,24 @@ mark {
                 </li> 
 				-->
                 <li class="page-scroll">
-                    <a onclick="javascript:reset_menus();$('#tab-4-content').show();" href="#courses">Courses</a>
+                    <a onclick="javascript:reset_menus();$('#tab-4-content').show();" href="https://dbhowmik.github.io/#courses">Courses</a>
                 </li>
 				<!--
                 <li class="page-scroll">
                     <a onclick="javascript:reset_menus();$('#tab-5-content').show();" href="#awards">Awards</a>
                 </li> -->
                 <li class="page-scroll">
-                    <a onclick="javascript:reset_menus();$('#tab-6-content').show();" href="#service">Professional</a>
+                    <a onclick="javascript:reset_menus();$('#tab-6-content').show();" href="https://dbhowmik.github.io/#service">Professional</a>
                 </li>                 
                 <li class="page-scroll">
-                <a onclick="javascript:reset_menus();$('#tab-8-content').show();" href="#grants">Grants</a>
+                <a onclick="javascript:reset_menus();$('#tab-8-content').show();" href="https://dbhowmik.github.io/#grants">Grants</a>
                 </li>
 				<li class="page-scroll">
-                <a onclick="javascript:reset_menus();$('#tab-7-content').show();" href="#team">Team</a>
+                <a onclick="javascript:reset_menus();$('#tab-7-content').show();" href="https://dbhowmik.github.io/#team">Team</a>
                 </li>
 				
                 <li class="page-scroll">
-                    <a onclick="javascript:reset_menus();$('#tab-9-content').show();" href="#contact">Contact</a>
+                    <a onclick="javascript:reset_menus();$('#tab-9-content').show();" href="https://dbhowmik.github.io/#contact">Contact</a>
                 </li>
                 <li class="page-scroll">
                     <a onclick="javascript:reset_menus();$('#bs-example-navbar-collapse-2').toggle();">
