--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@ mark {
            <p>
 		   <span class="label label-success">Leadership roles</span>
 		   <ul>
+			   	<li>Director of Business Innovation and Skills (2023-) and member of <a href="https://www.ncl.ac.uk/computing/staff/executive-board/"> the school executive board, School of Computing</a>a> at <a href="https://www.ncl.ac.uk/">Newcastle University</a>a.</li>
 				<li>MSc Program Director (2019-22) for <a href="https://www.stir.ac.uk/courses/pg-taught/computing-and-data-science/big-data/">Big Data</a> and <a href="https://www.stir.ac.uk/courses/pg-taught/computing-and-data-science/artificial-intelligence/">Artificial Intelligence (AI)</a> at University of Stirling.</li>
 				<li> Cyber security research theme leader (2019-21): <a href="https://www.sicsa.ac.uk/research/cyber-security/" target="_blank"> Scottish Informatics and Computer Science Alliance (SICSA)</a>.</li>
 				<li> Founder (2018-22): <a href="http://vip.cs.stir.ac.uk/" target="_blank">Stirling Vision and Image Processing (SVIP)</a> research group.</li>				
