--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ mark {
 		   
 		   <span class="label label-success">PhD Examiner</span>
 		   <ul>
-			   	<li> Internal (2024): <a href="https://www.ncl.ac.uk/" target="_blank">University of Antwerp</a>, Belgium.</li>
+			   	<li> Internal (2024): <a href="https://www.ncl.ac.uk/" target="_blank">Newcastle University</a>, UK.</li>
 				<li> External (2021): <a href="https://www.uantwerpen.be/en/" target="_blank">University of Antwerp</a>, Belgium.</li>
 				<li> External (2021): <a href="https://international.unicam.it/about-us" target="_blank">University in Camerino</a>, Italy.</li>
 				<li> External (2021): <a href="https://www.manchester.ac.uk/" target="_blank">University of Manchester</a>, UK.</li>
