--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ mark {
                     <span class="label label-success">RAEng [2020-24]</span> Royal Academy of Engineering GCRF funding on <a target="_blank" href="http://vip.cs.stir.ac.uk/weed-watch">Multimodal Data Analysis For Monitoring Invasive Aquatic Weeds In India</a>.
                 </li>				
 				<li>
-                    <span class="label label-success">PhD Studenship [2019-22]</span> Jointly funded by <a target="_blank" href="https://www.st.com/">STMicroelectronics</a>, Edinburgh and <a target="_blank" href="https://www.stir.ac.uk/">University of Stirling</a>.
+                    <span class="label label-default">PhD Studenship [2019-22]</span> Jointly funded by <a target="_blank" href="https://www.st.com/">STMicroelectronics</a>, Edinburgh and <a target="_blank" href="https://www.stir.ac.uk/">University of Stirling</a>.
                 </li>                 
                 <li>
                     <span class="label label-default">PhD Studenship [2019-23]</span> Jointly funded by <a target="_blank" href="https://www.sruc.ac.uk/">SRUC</a>, Inverness and <a target="_blank" href="https://www.stir.ac.uk/">University of Stirling</a>.
@@ -512,7 +512,7 @@ mark {
                     <span class="label label-default">Postdoc</span>  <a target="_blank" href="https://www.linkedin.com/in/teymoor-ali">Teymoor Ali</a>, <a target="_blank" href="https://ukri-netzero-energetic.github.io/">ENergy-aware hEteRoGenEous compuTIng at sCale (ENERGETIC)</a>.
                 </li>  
 		<li>
-                    <span class="label label-success">Ph.D.</span>  <a target="_blank" href="https://www.linkedin.com/in/teymoor-ali">Teymoor Ali</a>, University of Stirling, UK. <i>[Domain specific optimisations for real-time image processing on heterogeneous FPGA+CPU]</i>
+                    <span class="label label-default">Ph.D.</span>  <a target="_blank" href="https://www.linkedin.com/in/teymoor-ali">Teymoor Ali</a>, University of Stirling, UK. <i>[Domain specific optimisations for real-time image processing on heterogeneous FPGA+CPU]</i> (Submitted: 2023).
                 </li> 	
 				<li>
                     <span class="label label-default">Ph.D.</span>  <a target="_blank" href="https://www.linkedin.com/in/alexander-carmichael/">Alexander Carmichael</a>, University of Stirling, UK. <i>[Improving animal health in marine ecosystem using data minning and signal/image processing]</i> (Submitted: 2023).
