--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ mark {
 			<h2>Team</h2>
             <ul>	
 				<li>
-                    <span class="label label-success"> Postdoc</span> <a target="_blank" href=""> Position advertised</a>, Embedded Food Recognition (INFORM) Phase II.
+                    <span class="label label-success"> Postdoc</span> <a target="_blank" href="https://www.linkedin.com/in/james-rainey-b928b1a8/?originalSubdomain=uk"> Dr James Rainey</a>, Embedded Food Recognition (INFORM) Phase II.
                 </li>
 				<li>
                     <span class="label label-success">Ph.D.</span>  <a target="_blank" href="">Yen Lau</a>, Newcastle University, UK. <i></i>
