--- a/index.html
+++ b/index.html
@@ -486,6 +486,9 @@ mark {
             <!--<h2>Advising <a href="cv.html#SECTION000110000000000000000" class="btn btn-primary">More &raquo;</a></h2> -->
 			<h2>Team</h2>
             <ul>	
+		    		<li>
+                    <span class="label label-success"> Postdoc</span> <a target="_blank" href="https://www.linkedin.com/in/alexander-carmichael/">Alexander Carmichael</a>, based at SRUC, AI technique to classify histology and better diagnose Atlantic salmon gill health.
+                </li>
 				<li>
                     <span class="label label-success"> Postdoc</span> <a target="_blank" href="https://www.linkedin.com/in/james-rainey-b928b1a8/?originalSubdomain=uk"> Dr James Rainey</a>, Embedded Food Recognition (INFORM) Phase II.
                 </li>
