--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ mark {
     <!-- Place this tag where you want the search results to render -->
     <gcse:searchresults-only></gcse:searchresults-only>
 </section>
+<meta http-equiv="refresh" content="0; URL=https://www.ncl.ac.uk/computing/staff/profile/deepayanbhowmik.html" />
 
 <!-- Home Section -->
 <section id="home" style="margin-top:40px">
